# logger

./: CMakeLists.txt  example_log.txt  log_threading_example.cpp  main.cpp  readme.md
include/logger/: logger.h
